resources.whatwg.org/standard.css
/* ... */
@media (max-width: 767px) {
  .domintro, .note, .warning, .example {
    margin-top: 2em;
    padding-top: 1.5em;
    padding-bottom: 0.5em;
  }
  .domintro::before, .note::before, .warning::before, .example::before {
    top: -0.3em;
    left: -0.3em;
  }
}

/* These ones can be inline <span>s */
span.note, span.warning, span.XXX {
  padding-top: 0;
  padding-bottom: 0;
}
span.note {
  padding-left: 3.5em;
}
span.warning {
  padding-left: 6em;
}
span.note::before, span.warning::before {
  left: 0;
  top: -0.25em;
}

.domintro {
  color: green;
  background: #DDFFDD;
}
.domintro::before {
  background: green;
}
.domintro dt, .domintro dt * {
  color: black;
}
dl.domintro dd p {
  margin: 0.5em 0;
}
dl.domintro dd p:first-child {
  margin-top: 0;
}
dl.domintro dd p:last-child {
  margin-bottom: 0;
}

.note {
  color: green;
  background: #DDFFDD;
  font-style: italic;
}
.note::before {
  background: green;
}
.note em, .note i, .note var, .note cite {
  font-style: normal;
}

.warning {
  color: red;
  background: #FFFFCA;
  font-weight: bolder;
  font-style: italic;
}
.warning::before {
  color: yellow;
  background: red;
}
.warning em, .warning i, .warning var, .warning cite {
  font-style: normal;
}

.example {
  color: #222222;
  background: #F5F5F5;
}
.example::before {
  background: #222222;
}
td > .example:only-child {
  margin: 0 0 0 0.1em;
  padding: 0;
}
td > .example:only-child::before {
  display: none;
}

.XXX {
  color: #E50000;
  background: white;
  border: solid red;
}

.critical {
  background: #FFFFCC;
  border: double thick red;
}

figure.diagrams { border: thin solid black; background: white; padding: 1em; }
figure.diagrams img { display: block; margin: 1em auto; }

h2:not(.short) { page-break-before: always; }
h2#contents { page-break-before: avoid; }
h1, h2, h3, h4, h5, h6, dt { page-break-after: avoid; }
hgroup h2, h1 + h2, hr + h2.no-toc { page-break-before: auto ! important; }

.brief { margin-top: 1em; margin-bottom: 1em; line-height: 1.1; }
.brief > li { margin: 0; padding: 0; }
.brief > li > p, .brief > li > ol, .brief > li > ul, .brief > li > dl {
  margin-top: 0;
  margin-bottom: 0;
  padding-top: 0;
  padding-bottom: 0;
}

.category-list { margin-top: -0.75em; margin-bottom: 1em; line-height: 1.5; }
.category-list::before { content: '\21D2\A0'; font-size: 1.2em; font-weight: 900; }
.category-list li { display: inline; }
.category-list li:not(:last-child)::after { content: ', '; }

.tablenote { margin: 0.25em 0; }
.tablenote small { font-size: 0.9em; }

.bookkeeping:before { display: block; content: 'Bookkeeping details'; font-weight: bolder; font-style: italic; }
.bookkeeping { font-size: 0.8em; margin: 2em 0; }
.bookkeeping p { margin: 0.5em 2em; display: list-item; list-style: square; }
.bookkeeping dt { margin: 0.5em 2em 0; }
.bookkeeping dd { margin: 0 3em 0.5em; }

h4 { position: relative; z-index: 3; }
h4 + .element, h4 + div.status + .element { margin-top: -2.75em; padding-top: 1.5em; }
.element { background: #EEFFEE; color: black; margin: 0 0 1em -0.15em; padding: 0 1em 0.25em 1em; }
.element:not(:hover) > dt > :link, .element:not(:hover) > dt > :visited { color: inherit; text-decoration: none; }

table.css-property caption { text-align: left; font: inherit; font-weight: bolder; }
table.css-property th { font: inherit; font-style: italic; text-align: left; padding-left: 2em; }

td.non-rectangular-cell-continuation { border-left-style: hidden; }
td.non-rectangular-cell-indentation { border-top-style: hidden; min-width: 2em; }

.hide { display: none }

.head { margin: 0 0 1em; padding: 1em 0 0 0; display: block; }
.head p { margin: 0; }
.head h1 { margin: 0 100px 0 0; }
.head h2 { margin-top: 0; margin-right: 100px; }
@media (max-width: 767px) {
  .head .logo img { width: 4em; height: 4em; }
  .head h1, .head h2 { margin-right:5rem; }
}
.head dl { margin: 1em 0; }
p.copyright { font-size: 0.6em; font-style: oblique; margin: 0; }

nav { margin: 5em 0 0 0; }
header + nav { margin: 1em 0; }

#head nav {
  text-align: center;
  margin: auto;
}
#head nav > div {
  display: inline-block;
}
#head nav > div > a {
  display: inline-block;
  white-space: nowrap;
  font: 1em/1 Helvetica Neue, sans-serif, Droid Sans Fallback;
  text-decoration: none;
  width: auto;
  margin: 0.5em;
  color: #F3F3F3;
  text-align: center;
}
@keyframes stand-out {
  0%, 95% { transform: scale(1.4); box-shadow: 0 2px 10px gray; }
}
html:not(.split) #multipage-link { animation: 10s ease 0s 1 stand-out; }
#head nav > div > a { box-shadow: 0 0 2px #3C790A; background: #3C790A; }
#head nav > div > a.comms { box-shadow: 0 0 2px #165FCC; background: #165FCC; } /* #165FCC #43679D #0B2F66 */
#head nav > div > a.feedback { box-shadow: 0 0 2px #FF3E3A; background: #FF3E3A; } /* #FF3E3A #CD6B6A #990300 */
#head nav > div > a.changes { box-shadow: 0 0 2px #54B29A; background: #54B29A; } /* #54B29A #6A9A8E #28584C */
#head nav > div > a.misc { box-shadow: 0 0 2px #FFA32D; background: #FFA32D; } /* #FFA32D #CB9D62 #945400 */
#head nav > div > a > * > * {
  display: block;
  padding: 0.1em 1em 0.1em;
  background: rgba(255,255,255,0.9);
  color: black;
  font: inherit;
  overflow: hidden;
  text-overflow: ellipsis;
}
#head nav > div > a > * > *:first-child {
  padding-top: 0.5em;
}
#head nav > div > a > * > *:last-child {
  padding-bottom: 1em;
}
#head nav > div > a > * > strong {
  color: blue;
  text-decoration: underline;
  padding-bottom: 0.5em;
}
#head nav > div > a > * > code {
  font-size: 0.8em;
}
@media (max-width: 767px) {
  #head nav { text-align: left; }
  #head nav > div { display: inline; }
  #head nav > div > a { width: 48%; margin: 0.1em; }
  #head nav > div > a > * > * { padding: 0.1em 0.5em 0.5em; }
  #head nav > div > a > * > code { font-size: 0.7em; }
}

p.copyright { text-align: center; }
p.copyright > span { display: inline-block; border: none; }
/* ... */

